# small-hydro-screening

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/plan/: cost-estimate.md  roadmap.md
docs/plan/adr/: ADR-001_repos-first.md  ADR-002_hydro-scraping.md  ADR-003_grid-capacity-scope.md
docs/runbooks/: monthly-update.md
docs/setup/: environment.md
docs/specs/: 00_overview.md  01_data-sources.md  02_scoring.md  03_output-schema.md
docs/tests/: unit-test-cases.md
src/small_hydro/: cli.py  config.py  pipeline.py
src/small_hydro/compute/: composite_score.py  economics.py  flow.py  head.py  head_estimation.py  output.py  scoring.py
src/small_hydro/geo/: filters.py  overlay.py  proximity.py
src/small_hydro/ingest/: grid_capacity.py  gsi_elevation.py  mlit_hydro.py  osm_overpass.py  repos.py
src/small_hydro/viz/: folium_map.py  tabelog_map.py
tests/fixtures/sample_data/: repos_sample.csv
tests/integration/: test_pipeline.py
tests/unit/: test_composite_score.py  test_economics.py  test_flow.py  test_head.py  test_head_estimation.py  test_osm_overpass.py  test_output.py  test_repos.py  test_scoring.py
